[package]
name = "flusso-schema-config-toml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser for flusso's flusso.toml configuration files."
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["parser-implementations"]
readme.workspace = true

[lib]
name = "schema_config_toml"

[lints]
workspace = true

[dependencies]
schema-core.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
