[package]
name = "flusso-schema-index-yaml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser for flusso's *.schema.yml index definitions."
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["parser-implementations"]
readme.workspace = true

[lib]
name = "schema_index_yaml"

[lints]
workspace = true

[dependencies]
schema-core.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true
