[package]
name = "sources-postgres-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.sources-postgres]
path = ".."
features = ["fuzzing"]

[[bin]]
name = "pgoutput_decode"
path = "fuzz_targets/pgoutput_decode.rs"
test = false
doc = false
bench = false

# Own workspace so the fuzz crate (nightly-only, libfuzzer-instrumented) stays
# out of the parent workspace and its strict `[workspace.lints]`.
[workspace]
